--- a/Pandas_Correlation.ipynb
+++ b/Pandas_Correlation.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:302b47b64320f1480134cf6bc4cec1da5a5940bcb48ef1b47796840812f7946d"
+  "signature": "sha256:76a4167c1b76c74a9fa658173f935ccd5683776d559356b4a7cd4ab8e3cedddd"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -20,7 +20,7 @@
       "rk = corr[:1]\n",
       "topcorr = rk.sort('Rk',ascending = True)\n",
       "\n",
-      "print topcorr"
+      "print rk"
      ],
      "language": "python",
      "metadata": {},
@@ -42,7 +42,7 @@
        ]
       }
      ],
-     "prompt_number": 7
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -131,6 +131,27 @@
       }
      ],
      "prompt_number": 10
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "topcorr['2P%']"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 3,
+       "text": [
+        "Rk    0.601318\n",
+        "Name: 2P%, dtype: float64"
+       ]
+      }
+     ],
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
